# linkedin-post-generator

./: .gitignore  README.md  few_shot.py  llm_helper.py  main.py  preprocess.py  pyproject.toml  requirements.txt
data/: processed_posts.json  raw_posts.json
